# kazoo

./: .gitignore  CLAUDE.md  CONVENTIONS.toml  Cargo.toml  README.md
briefs/: 00-architecture.md  01-dsp.md  02-pulse.md  03-mixbus.md  04-drum808.md  05-subbass.md  06-arpeggio.md  07-cs80.md  08-kazoo.md  09-fx.md  10-sampler.md  11-tape.md
design/terminal-daw/: CHECKLIST.md  CRATE_SPLIT.md  DESIGN.md  IPC_TRANSPORT.md  MIXER.md  TAPE.md  USER_STORIES.md
kazoo-303/: Cargo.toml
kazoo-303/src/: main.rs  sequencer.rs  synth.rs  ui.rs
kazoo-808/: Cargo.toml
kazoo-808/src/: app.rs  ipc.rs  lib.rs  main.rs
kazoo-808/src/sequencer/: clock.rs  mod.rs
kazoo-808/src/synth/: clap.rs  cowbell.rs  hihat.rs  kick.rs  mod.rs  snare.rs  tom.rs
kazoo-808/src/ui/: grid.rs  mod.rs  params.rs
kazoo-arp/: Cargo.toml
kazoo-arp/src/: app.rs  clock.rs  engine.rs  ipc.rs  lib.rs  main.rs
kazoo-arp/src/ui/: controls.rs  mod.rs  pattern.rs
kazoo-core/: Cargo.toml
kazoo-core/src/: audio_transport.rs  lib.rs  notation.rs  protocol.rs
kazoo-core/src/analysis/: envelope.rs  formant.rs  mod.rs  onset.rs  pitch.rs  spectrum.rs
kazoo-core/src/effects/: chorus.rs  delay.rs  distortion.rs  filter.rs  formant_shift.rs  mod.rs  reverb.rs
kazoo-core/src/engine/: analysis_thread.rs  command.rs  disk.rs  display.rs  handle.rs  midi.rs  mod.rs  processing.rs
kazoo-core/src/io/: device.rs  file.rs  mod.rs  recorder.rs  resample.rs
kazoo-core/src/ipc/: client.rs  discovery.rs  mod.rs  protocol.rs  server.rs  types.rs
kazoo-core/src/mixer/: clip.rs  mod.rs
kazoo-core/src/synthesis/: granular.rs  mod.rs  phase_vocoder.rs  pitch_tracked.rs  vocoder.rs  wavetable.rs
kazoo-core/src/transport/: metronome.rs  mod.rs
kazoo-cs80/: Cargo.toml
kazoo-cs80/src/: app.rs  input.rs  ipc.rs  main.rs
kazoo-cs80/src/modular/: graph.rs  mod.rs  node.rs  nodes.rs
kazoo-cs80/src/synth/: drift.rs  envelope.rs  filter.rs  layer.rs  lfo.rs  mod.rs  oscillator.rs  ring_mod.rs  voice.rs
kazoo-cs80/src/ui/: mod.rs
kazoo-juno/: Cargo.toml
kazoo-juno/src/: app.rs  lib.rs  main.rs  ui.rs
kazoo-juno/src/synth/: chorus.rs  engine.rs  envelope.rs  filter.rs  mod.rs  params.rs  voice.rs
kazoo-mini/: Cargo.toml
kazoo-mini/src/: app.rs  input.rs  ipc.rs  main.rs
kazoo-mini/src/synth/: envelope.rs  glide.rs  ladder.rs  mixer.rs  mod.rs  oscillator.rs  xmod.rs
kazoo-mini/src/ui/: envelopes.rs  filter.rs  mod.rs  monitor.rs  oscillators.rs  performance.rs
kazoo-mix/: Cargo.toml
kazoo-mix/src/: control.rs  engine.rs  lib.rs  main.rs  mixer_ui.rs  session.rs  source.rs  terminal.rs
kazoo-play/: Cargo.toml
kazoo-play/src/: main.rs
kazoo-prophet/: Cargo.toml
kazoo-prophet/src/: app.rs  input.rs  lib.rs  main.rs  ui.rs
kazoo-prophet/src/synth/: engine.rs  envelope.rs  filter.rs  mod.rs  noise.rs  oscillator.rs  params.rs  status.rs  voice.rs
kazoo-tui/: Cargo.toml
kazoo-tui/src/: app.rs  main.rs  state.rs  theme.rs
kazoo-tui/src/input/: mod.rs
kazoo-tui/src/ui/: audio_io.rs  drawer.rs  effects.rs  file_browser.rs  header.rs  meters.rs  mixer.rs  mixing_desk.rs  mod.rs  project_view.rs  spectrum.rs  timeline.rs  tracking_view.rs  tracks.rs  transport.rs  waveform.rs
studio/: hub-ipc.md  kazoo-808.md  kazoo-arp.md  kazoo-cs80.md  kazoo-juno.md  kazoo-mini.md
