[package]
name = "kazoo-arp"
version = "0.1.0"
edition = "2024"
description = "Jupiter-8 style arpeggiator — note scheduler for any synth"

[lints]
workspace = true

[dependencies]
kazoo-core = { version = "0.1.0", path = "../kazoo-core" }
cpal = "0.17"
crossbeam-channel = "0.5"
crossterm = "0.29"
ratatui = "0.30"
color-eyre = "0.6"
ringbuf = "0.4"
