[package]
name = "kazoo-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
audioadapter-buffers = "2.0.0"
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
dasp_sample = "0.11.0"
fundsp = "0.23.0"
hound = "3.5.1"
midir = "0.10.3"
num-complex = "0.4.6"
pyin = "1.2.0"
ringbuf = "0.4.8"
rubato = "1.0.1"
rustfft = "6.4.1"
symphonia = "0.5.5"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"
