[package]
name = "kazoo-cs80"
version = "0.1.0"
edition = "2024"
description = "Yamaha CS-80 inspired pad synth — 8-voice polyphonic, dual-layer"

[lints]
workspace = true

[dependencies]
kazoo-core = { version = "0.1.0", path = "../kazoo-core" }
cpal = "0.17"
crossbeam-channel = "0.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
color-eyre = "0.6.5"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
