[package]
name = "kazoo-tui"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3"
kazoo-core = { version = "0.1.0", path = "../kazoo-core" }
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
crossbeam-channel = "0.5"
ringbuf = "0.4"
